--- a/.gitignore
+++ b/.gitignore
@@ -130,12 +130,6 @@ UpgradeLog*.htm
 App_Data/*.mdf
 App_Data/*.ldf
 
-
-#LightSwitch generated files
-GeneratedArtifacts/
-_Pvt_Extensions/
-ModelManifest.xml
-
 # =========================
 # Windows detritus
 # =========================
@@ -150,5 +144,5 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
-# Mac desktop service store files
+# Mac crap
 .DS_Store
