Reorganized methods and reduced the amount of unnecessary file parsing

--- a/CyberAssistTool/CyberAssistTool.csproj
+++ b/CyberAssistTool/CyberAssistTool.csproj
@@ -14,7 +14,7 @@
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\Jon\Desktop\</PublishUrl>
+    <PublishUrl>www.limyc.com/cat/</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
