--- a/CyberAssistTool/CyberAssistTool.csproj
+++ b/CyberAssistTool/CyberAssistTool.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,6 +82,7 @@
     </Compile>
     <Compile Include="DataSource.cs" />
     <Compile Include="IniFile.cs" />
+    <Compile Include="JsonHelper.cs" />
     <Compile Include="MainMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,6 +139,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\options.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Rage_Icon.ico" />
