Option presets are now loaded from a JSON file and stored in a dictionary.

--- a/CyberAssistTool/CyberAssistTool.csproj
+++ b/CyberAssistTool/CyberAssistTool.csproj
@@ -139,7 +139,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Resources\options.json" />
+    <EmbeddedResource Include="Resources\options.json" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Rage_Icon.ico" />
